@@ -112,7 +112,8 @@ Extension Modules
 Tests
 -----
 
-- Issue #7449: Fix many tests to support Python compiled without thread support
+- Issue #7449: Fix many tests to support Python compiled without thread
+  support. Patches written by Jerry Seutter.
 
 - Issue #8108: test_ftplib's non-blocking SSL server now has proper handling
   of SSL shutdowns.
